# Crewai-Projects

automated_project_planing/: README.md  env.example  pyproject.toml
automated_project_planing/src/automated_project_planing/: main.py  types.py
automated_project_planing/src/automated_project_planing/crews/automated_project_crew/: project_crew.py
automated_project_planing/src/automated_project_planing/crews/automated_project_crew/config/: agents.yaml  tasks.yaml
game_builder_crew/: README.md  pyproject.toml
game_builder_crew/generated_games/: example2_pacman.py  example3_snake.py
game_builder_crew/src/game_builder_crew/: crew.py  game.py  main.py
game_builder_crew/src/game_builder_crew/config/: agents.yaml  gamedesign.yaml  tasks.yaml
job_posting_crew/: README.md  pyproject.toml
job_posting_crew/src/job_posting_crew/: crew.py  main.py
job_posting_crew/src/job_posting_crew/config/: tasks.yaml
sales_pipeline_flow/: env.example  pyproject.toml
sales_pipeline_flow/src/sales_pipeline/: main.py  types.py
sales_pipeline_flow/src/sales_pipeline/crews/email_engagement_crew/: email_engagement.py
sales_pipeline_flow/src/sales_pipeline/crews/email_engagement_crew/config/: agents.yaml  tasks.yaml
sales_pipeline_flow/src/sales_pipeline/crews/lead_qualification_crew/: lead_qualification.py
sales_pipeline_flow/src/sales_pipeline/crews/lead_qualification_crew/config/: agents.yaml  tasks.yaml
shoping_agent/: README.md  env.example  pyproject.toml
shoping_agent/src/shoping_agent/: crew.py  main.py
shoping_agent/src/shoping_agent/config/: agents.yaml  tasks.yaml
shoping_agent/src/shoping_agent/tools/: dummy_data.py  productcatalog_tool.py  userdata_tool.py
stock_analysis_crew/: README.md  env.example  pyproject.toml
stock_analysis_crew/db/9f7c3375-7b86-4f62-b076-f815226863e7/: index_metadata.pickle
stock_analysis_crew/src/stock_analysis_crew/: crew.py  main.py
stock_analysis_crew/src/stock_analysis_crew/config/: tasks.yaml
stock_analysis_crew/src/stock_analysis_crew/tools/: calculator_tool.py  sec_tools.py
travel_agent_flow/: README.md  crewai_flow.html  pyproject.toml
travel_agent_flow/src/travel_agent_flow/: main.py
travel_agent_flow/src/travel_agent_flow/crews/trip_crew/: trip_crew.py
travel_agent_flow/src/travel_agent_flow/crews/trip_crew/config/: agents.yaml  tasks.yaml
write_a_book_with_flows/: README.md  The_Current_State_of_AI_in_February_2025.md  The_Current_State_of_AI_in_March_2025.md  env.example  pyproject.toml
write_a_book_with_flows/src/write_a_book_with_flows/: main.py  types.py
write_a_book_with_flows/src/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
write_a_book_with_flows/src/write_a_book_with_flows/crews/outline_book_crew/config/: tasks.yaml
write_a_book_with_flows/src/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
write_a_book_with_flows/src/write_a_book_with_flows/crews/write_book_chapter_crew/config/: agents.yaml  tasks.yaml
