[project]
name = "game_builder_crew"
version = "0.1.0"
description = "game-builder-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "pygame>=2.6.1",
    "streamlit>=1.42.2",
]

[project.scripts]
game_builder_crew = "game_builder_crew.main:run"
run_streamlit_app = "game_builder_crew.main:run_streamlit_app"
run_crew = "game_builder_crew.main:run"
train = "game_builder_crew.main:train"
replay = "game_builder_crew.main:replay"
test = "game_builder_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
