[project]
name = "job_posting_crew"
version = "0.1.0"
description = "job_posting_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.4",
    "streamlit>=1.42.2",
]

[project.scripts]
job_posting_crew = "job_posting_crew.main:run"
run_crew = "job_posting_crew.main:run"
run_streamlit_app = "job_posting_crew.main:run_streamlit_app"
train = "job_posting_crew.main:train"
replay = "job_posting_crew.main:replay"
test = "job_posting_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
