[project]
name = "sales_pipeline"
version = "0.1.0"
description = "sales_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "streamlit>=1.42.2",
]

[project.scripts]
kickoff = "sales_pipeline.main:kickoff"
run_streamlit_app = "sales_pipeline.main:run_streamlit_app"
plot = "sales_pipeline.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
