[project]
name = "shoping_agent"
version = "0.1.0"
description = "shoping_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "streamlit>=1.42.2",
]

[project.scripts]
shoping_agent = "shoping_agent.main:run"
run_streamlit_app = "shoping_agent.main:run_streamlit_app"
run_crew = "shoping_agent.main:run"
train = "shoping_agent.main:train"
replay = "shoping_agent.main:replay"
test = "shoping_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
