[project]
name = "stock_analysis_crew"
version = "0.1.0"
description = "stock_analysis_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.4",
    "html2text>=2024.2.26",
    "sec-api>=1.0.28",
]

[project.scripts]
stock_analysis_crew = "stock_analysis_crew.main:run"
run_crew = "stock_analysis_crew.main:run"
train = "stock_analysis_crew.main:train"
replay = "stock_analysis_crew.main:replay"
test = "stock_analysis_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
